--- a/analysis/RNAseq_syn11374339_Wallace.Rmd
+++ b/analysis/RNAseq_syn11374339_Wallace.Rmd
@@ -23,8 +23,6 @@ knitr::opts_chunk$set(engine.opts = list(bash = "-l")) #execute bash
 
 ```{r lib_synapser, echo=FALSE, eval=TRUE, results='hide', message=FALSE, warning=FALSE, include=FALSE}
 
-library(synapser)
-library(synapserutils)
 library(reticulate)
 
 library(BiocManager)
@@ -33,26 +31,48 @@ library(gprofiler2)
 library(tidyverse)
 library(DT)
 library(stringr) 
-library(DESeq2)
+#library(DESeq2)
 library(limma)
 library(edgeR)
 library(pheatmap)
+library(ggrepel)
+library(ggfortify)
+
 ```
 
-```{r login_to_synapse, eval=TRUE, echo=FALSE, results='hide', message=FALSE, warning=FALSE, include=FALSE}
+```{python login_to_synapse, eval=TRUE, echo=FALSE, results='hide', message=FALSE, warning=FALSE, include=FALSE}
 
 ## The login credentials have been stored in .synapseConfig file in the home dir. If you dont have this setup, please make the file before trying to login.
-synapser::synLogin()
+import synapseclient
+syn = synapseclient.Synapse()
+
+syn.login(email= "jineta.banerjee",
+                   apiKey= "")
 
 ```
 
-
-```{r gene counts, echo=FALSE, eval=TRUE, results='hide', message=FALSE, fig.height=10, fig.width=10}
+```{python get_data, eval=TRUE, echo=FALSE, results='hide', message=FALSE, warning=FALSE, include=FALSE}
 
 # get counts file
-# entity <- synGet("syn29532377", downloadLocation = "/home/ubuntu/Data_files/CNF_wallace")
-cts <- as.data.frame(read.csv("/home/ubuntu/Data_files/CNF_wallace/salmon.merged.gene_counts.tsv", sep="\t", row.names="gene_id")) 
-colnames(cts)[2] <- "28NF"
+#syn.get("syn29532377", downloadLocation = "~/cnf-cell-lines/data")
+
+# get metadata
+query =  "SELECT * FROM syn11601459 where assay = 'rnaSeq' and fileFormat = 'sf' and name = 'quant.sf'"
+metadata = syn.tableQuery(query).asDataFrame() 
+
+```
+
+&nbsp;
+
+### RNA sequencing data from project
+
+Fastq files from RNA sequencing data in this [dataset](https://www.synapse.org/#!Synapse:syn29542674/datasets/) were processed using standardized processing tools and parameters as listed in [this link](https://sagebionetworks.jira.com/wiki/spaces/NPD/pages/2595913729/Nextflow+Data+Processing+Configuration). The raw counts of transcripts identified in the files were analyzed as follows:
+
+```{r gene_counts, echo=FALSE, eval=TRUE, results='hide', message=FALSE, fig.height=10, fig.width=10}
+
+cts <- as.data.frame(read.csv("~/cnf-cell-lines/data/salmon.merged.gene_counts.tsv", sep="\t", row.names="gene_id")) 
+colnames(cts)[2] <- "28cNF"
+colnames(cts)[12] <- "i28cNF"
 
 # gene to ensg mapping
 gene_2_ensg <- as.data.frame(cts$gene_name)
@@ -60,58 +80,68 @@ gene_2_ensg$ensg <- rownames(cts)
 gene_2_ensg <- gene_2_ensg %>% unique()
   
 # get metadata
-query <-  "SELECT * FROM syn11601459 where assay = 'rnaSeq' and fileFormat = 'sf' and name = 'quant.sf'"
-metadata <- synTableQuery(query)$asDataFrame() %>% 
+metadata <- py$metadata
+metadata <- metadata %>% 
   dplyr::select(c(id,specimenID,tumorType,individualID,sex)) %>% 
   unique() %>% 
   dplyr::mutate(specimen = stringr::str_replace_all(specimenID, " ", "_"))
 rownames(metadata) <- metadata$specimen
-metadata$tumorType <- as.factor(metadata$tumorType)
-metadata$isCellLine <- "No"
-metadata$isCellLine[metadata$specimen %in% c("i28NF", "icNF97.2a", "icNF04.9a" , "icNF97.2b", "icNF98.4c", "icNF98.4d", "icNF00.10a", "hTERT_NF1_ipNF05.5", "hTERT_NF1_ipNF95.11b_C", "hTERT_NF1_ipNF95.6") ] <- "Yes"
-metadata$isCellLine <- as.factor(metadata$isCellLine)
-metadata$treatment <- as.factor(stringr::str_c(metadata$tumorType, "_immortalized_", metadata$isCellLine))
+metadata$tumorType <- as.factor(unlist(metadata$tumorType))
+metadata$immortalized <- "No"
+metadata$immortalized[metadata$specimen %in% c("i28cNF", "icNF97.2a", "icNF04.9a" , "icNF97.2b", "icNF98.4c", "icNF98.4d", "icNF00.10a", "hTERT_NF1_ipNF05.5", "hTERT_NF1_ipNF95.11b_C", "hTERT_NF1_ipNF95.6") ] <- "Yes"
+metadata$immortalized <- as.factor(metadata$immortalized)
+
+```
+
+```{r make_dataset, echo=FALSE, eval=TRUE, results='hide', message=FALSE, fig.height=10, fig.width=10}
 
 # find out if specimenID is the right column to match 
 #colnames(cts)
 
+#remove gene_name column
+cts_mat <- cts[,c(2:18)] 
+
 #check if all names match the samples
-#all(rownames(metadata) %in% colnames(cts))
+all(rownames(metadata) %in% colnames(cts_mat))
 
 # match the order of samples in both matrices
-cts <- cts[, rownames(metadata)]
+cts_mat <- cts_mat[, rownames(metadata)]
+
 #all(rownames(metadata) == colnames(cts))
+
+#convert raw counts dataframe into a matrix 
+gene_mat<-as.matrix(cts_mat)
+rownames(gene_mat) <- cts$gene_name
+
+#remove duplicate rows, keep rows with max gene expression
+no_dupes_gene_mat <- aggregate(gene_mat, by=list(rownames(gene_mat)), FUN=max)
+
+# Remove low expressed genes
+keepRows <- rowSums((no_dupes_gene_mat[,]) >= 10) >= (ncol(no_dupes_gene_mat[,])*0.8)
+#table(keepRows)
+no_dupes_gene_mat <- no_dupes_gene_mat[keepRows,]
+
+rownames(no_dupes_gene_mat) <- no_dupes_gene_mat$Group.1 
+no_dupes_gene_mat <- no_dupes_gene_mat %>%  
+  dplyr::select(-"Group.1")
 
 ```
 
-## Principal component analysis of all samples
+&nbsp;
 
-```{r TMM-LCPM normalization, eval=TRUE, echo=FALSE, results='hide', message=FALSE, warning=FALSE, fig.height = 10, fig.width = 10}
+### Principal component analysis of all samples:
 
-gene_mat<-as.matrix(cts)
-# missing<-which(apply(gene_mat,1,function(x) any(is.na(x))))
-# gene_mat<-gene_mat[-missing,]
+First a principal component analysis was performed to see if there were evident clustering of non-immortalized and immortalized cell lines. The non-immortalized and immortalized cell lines were found to be uniformly distributed. The PC1 and PC2 only accounted for 18-21% of variance in the samples suggesting that the samples were not vastly different from each other. Since most of the samples were cNF samples, this suggests that no significant differences were noted between the different cNF samples. Since there were only 3 pNF samples, this analysis was underpowered to capture any differences between cNF and pNF samples. 
 
-# Remove low expressed genes
-#print("Genes that passed low expression filter:")
-keepRows <- rowSums((gene_mat[,]) >= 10) >= (ncol(gene_mat[,])*0.8)
-#table(keepRows)
-gene_mat <- gene_mat[keepRows,]
-# 
-# ## avg expression filter
-# keepRows <- apply(gene_mat[],1,mean) >= 1
-# table(keepRows)
-# gene_mat <- gene_mat[keepRows,]
+```{r TMM-LCPM normalization, eval=TRUE, echo=FALSE, results='hide', message=FALSE, warning=FALSE, fig.height = 20, fig.width = 20}
 
-DGE.all <-DGEList(counts=gene_mat) # function from edgeR
+# prepare for DGE analysis using edgeR and limma
+DGE.all <-DGEList(counts=no_dupes_gene_mat) 
 
-# TMM normalization
-DGE.all <- calcNormFactors(DGE.all, method = "TMM")  # function from edgeR
-
+# TMM normalization to account for library related differences
+DGE.all <- calcNormFactors(DGE.all, method = "TMM")  
 
 # make a normalized counts matrix for use outside of limma (PCA, etc)
-#print("Normalization factors for the first few libraries:")
-#head(DGE.all$samples, n=20)
 norm.factors <- DGE.all$samples[,"norm.factors"]
 normCounts.all <- as.data.frame(t(t(DGE.all$counts)/norm.factors))
 DGE.all <- DGEList(counts=normCounts.all)
@@ -120,63 +150,69 @@ DGE.all <- DGEList(counts=normCounts.all)
 lcpm.normCounts <- edgeR::cpm(DGE.all, log=TRUE, prior.count = 1)
 
 ## PCA to look at how the datasets differ
-library(ggfortify)
+
 pca_res <- prcomp(t(lcpm.normCounts),scale=TRUE) 
 var_explained <- pca_res$sdev^2/sum(pca_res$sdev^2)
 results <- as.data.frame(pca_res$x)
 results$specimen <- rownames(results)
-anno <- metadata
   
-plot_data <- merge(results, anno)
+plot_data <- merge(results, metadata)
 
+#pdf("~/cnf-cell-lines/figures/PCA_092622.pdf", height = 20, width = 20)
 plot_data %>% 
      ggplot(aes(x=PC1,
                y=PC2)) + 
-    geom_point(aes(colour = as.factor(specimen), shape = as.factor(treatment)), size=5) +
-    geom_label( 
-    data=plot_data %>% filter(specimen == "hTERT_NF1_ipNF95.11b_C"), # Filter data first
-    aes(label=specimenID),
-    nudge_x = 0, nudge_y = 5, 
-    check_overlap = T) +
-    theme_bw() + 
-  labs(x=paste0("PC1: ",round(var_explained[1]*100,1),"%"),
-       y=paste0("PC2: ",round(var_explained[2]*100,1),"%")) +
-  theme(legend.position="right")
+    geom_point(aes(colour = as.factor(immortalized), shape = as.factor(tumorType)), size=10) +
+    geom_label_repel(aes(label=specimenID), size = 6)+
+  labs(x=paste0("Variance along Principal Component 1: ",round(var_explained[1]*100,1),"%"),
+       y=paste0("Variance along Principal Component 2: ",round(var_explained[2]*100,1),"%"),
+       color = "Immortalization status",
+       shape = "Tumor Type")+
+  theme_bw()+
+  theme(legend.text = element_text(size=20), 
+              axis.text.x  = element_text(size=30, angle = 0),
+              axis.text.y = element_text(size=30),
+              text = element_text(size=30),
+              strip.text.x = element_text(size = 30),
+              legend.position="right",
+              panel.grid = element_blank(),
+              panel.background = element_rect(fill = "white"))
+#dev.off()
 
 
 ```
 
 &nbsp;
 
-## Differential gene expression analysis in cNF vs icNF samples:
+### Differential gene expression analysis in cNF vs icNF samples:
 
-TMM normalization was used to prepare the dataset for differential gene expression analysis. We then used limma-edgeR based analysis to find differentially expressed genes in the TMM normalized dataset. 
+TMM normalization was used to account for library sizes and prepare the dataset for differential gene expression analysis. We then used limma-edgeR based analysis to find differentially expressed genes in the TMM normalized dataset. 
 
-
-```{r DEG1, echo=F, eval= TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=20, fig.width=20}
+```{r DEG1, echo=FALSE, eval=TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=20, fig.width=20}
 
 #Select annotations
 annotes=metadata %>%
-  dplyr::select(specimen,sex,treatment) %>%
+  dplyr::select(specimen,sex,immortalized,tumorType) %>%
   unique()
-annotes$tumorType <- as.factor(annotes$treatment)
+annotes$specimenType <- as.factor(as.factor(stringr::str_c(metadata$tumorType, "_immortalized_", metadata$immortalized)))
 annotes$sex <-as.factor(annotes$sex)
 rownames(annotes)<-annotes$specimen
 
 ## DEG analysis using limma, Glimma and EdgeR
-
 limma_object <- DGE.all  # make new DGElist object so that we dont change the original object
 
 #make design matrix
 annotes <- annotes %>% 
   dplyr::filter(specimen %in% colnames(gene_mat)) 
 ordered_annotes <- annotes[match(colnames(gene_mat), annotes$specimen),]
-group_object <- ordered_annotes$treatment
+group_object <- ordered_annotes$specimenType
 batch <- ordered_annotes$studyName
 sex <- ordered_annotes$sex
 
 design_new <- model.matrix(~0+group_object)
 colnames(design_new) <- gsub("group_object", "", colnames(design_new)) # modify the colnames to remove "group_object" addition
+
+# clean up group names
 colnames(design_new) <- colnames(design_new) %>% 
   stringr::str_remove_all(pattern = "\"") %>% 
   stringr::str_remove_all(pattern = "\\[" ) %>% 
@@ -187,11 +223,9 @@ colnames(design_new) <- gsub(" ", "_", colnames(design_new))
 
 &nbsp;
  
-  The volcano plot below shows genes that are significantly overexpressed in cNF compared to icNF (logFC > 2) in red. The dots in blue refer to genes that are significantly underexpressed in icNF compared to cNF (logFC < -2). The thresholds of fold change have been arbitrarily chosen for ease of visualization in the volcano plot shown below.
-  
-  The heatmap below the volcano plot shows the expression differences of the top 100 differentially expressed genes between cNF and icNF samples. The cluster tree shows splitting of the differentially expressed genes into 2 main clusters according to expression patterns in the comparison groups.
+  The volcano plot below shows genes that are significantly overexpressed in cNF compared to icNF with a log fold change > 2 in red. The dots in blue refer to genes that are significantly underexpressed in icNF compared to cNF with a log fold change < -2. The thresholds of fold change have been arbitrarily chosen for ease of visualization in the volcano plot shown below.
 
-```{r DEG2, echo=F, eval= TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=20, fig.width=20, fig.cap=""}
+```{r DEG2_volcano_plot, echo=FALSE, eval=TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=20, fig.width=20, fig.cap=""}
 
 contr.matrix <- makeContrasts(
    cNFvsicNF = Cutaneous_Neurofibroma_immortalized_No - Cutaneous_Neurofibroma_immortalized_Yes,
@@ -200,80 +234,108 @@ contr.matrix <- makeContrasts(
 
 ## Using voom to make Elist object
 #print("Visualizing the mean variance trend of the RNASeq dataset")
-voom_object <- voomWithQualityWeights(limma_object, design_new, plot=FALSE) # removing heteroscadisticity
+voom_object <- voomWithQualityWeights(limma_object, design_new, plot=FALSE) # removing heteroscedasticity
 #voom_object$genes <- genes_unique
 
 ## Run DGE analysis using lmFit
 
-fit_new <- lmFit(voom_object, design_new)
-contrast_fit_new <- contrasts.fit(fit_new, contrasts=contr.matrix)
-fit <- eBayes(contrast_fit_new, trend=TRUE)
+fit <- lmFit(voom_object, design_new)
+contrast_fit <- contrasts.fit(fit, contrasts=contr.matrix)
+fit <- eBayes(contrast_fit, trend=TRUE)
 
-results_fit_new <- decideTests(fit)
-#summary(results_fit_new)
+results_fit <- decideTests(fit)
+#summary(results_fit)
 
-#vennDiagram(results_fit_new[,c(1)], circle.col=c("turquoise", "salmon"))
 cNFvsicNF <- topTreat(fit, coef=1, n=Inf)
-cNFvsicNF$Genes <- rownames(cNFvsicNF)
-cNFvsicNF_ordered <- cNFvsicNF[order(cNFvsicNF$adj.P.Val),]
 
 ## Volcano Plots:
-
-cNFvsicNF_ordered <-cNFvsicNF_ordered %>%
+## make gene exp dataframe with genes ordered by adj.Pvalue
+cNFvsicNF_ordered <-cNFvsicNF %>%
   mutate(threshold = ifelse(logFC >= 2 & adj.P.Val <= 0.05,"A", 
                             ifelse(logFC<=-2 & adj.P.Val <= 0.05, 
-                                   "B", "C")))
+                                   "B", "C"))) %>% 
+  arrange(adj.P.Val) %>% 
+  dplyr::select(c(logFC, adj.P.Val, threshold)) 
+cNFvsicNF_ordered$gene_name <- rownames(cNFvsicNF_ordered)
 
-#png(filename = "volcanoplot_mpnst_pnf.png", width = 1200, height = 1200)
+#pdf("~/cnf-cell-lines/figures/volcanoplot_cNF_icNF_092622.pdf", width = 20, height = 20)
 ggplot(data=cNFvsicNF_ordered, aes(x=logFC, y=-log10(adj.P.Val))) +
   geom_point(aes(colour = threshold), alpha=0.3, size=8) +
   xlim(c(-10, 10)) + ylim(c(0, 2.5)) +
- xlab(expression(log[2]*" fold change")) + ylab(expression(-log[10]*" BH adjusted p-value"))
   scale_colour_manual(values = c("A"= "red", "B"="blue",  "C"= "black")) +
-  # geom_text(aes(label = ifelse(threshold != "C", 
-  #                              as.character(Genes), ""), 
-  #               colour = as.factor(threshold)), size = 10, angle = 45, hjust = -0.25) +
+  geom_label_repel(aes(label = ifelse(threshold != "C",
+                               as.character(rownames(cNFvsicNF_ordered)), ""),
+                colour = as.factor(threshold)), size = 5, angle = 45, hjust = -0.25, max.overlaps = 30) +
+  labs(x=expression(log[2]*" fold change"),
+       y=expression(-log[10]*" BH adjusted p-value"))+
   theme_bw()+
   theme(legend.text = element_text(size=20), #element_text(size=8),
-              axis.text.x  = element_text(size=40, angle = 0),
-              axis.text.y = element_text(size=40),
-              text = element_text(size=40),
-              strip.text.x = element_text(size = 40),
+              axis.text.x  = element_text(size=30, angle = 0),
+              axis.text.y = element_text(size=30),
+              text = element_text(size=30),
+              strip.text.x = element_text(size = 30),
               legend.position="none",
               panel.grid = element_blank(),
               panel.background = element_rect(fill = "white")) 
 #dev.off()
 
-annotes=metadata %>%
-  dplyr::select(specimen,sex,treatment) %>%
-  dplyr::filter(treatment %in% c(levels(metadata$treatment)[1], levels(metadata$treatment)[2])) %>% 
+```
+
+&nbsp;
+
+The heatmap below the volcano plot shows the expression differences of all significantly differentially expressed genes between cNF and icNF samples. The cluster tree shows splitting of the differentially expressed genes into 4 main clusters according to expression patterns in the comparison groups.
+
+```{r DEG3_heatmap, echo=FALSE, eval=TRUE, results='hide', message=FALSE, warning=FALSE, fig.height=20, fig.width=20, fig.cap=""}
+
+# select annotations for the two selected groups
+annotes <- annotes %>%
+  dplyr::filter(specimenType %in% c(levels(annotes$specimenType)[1], levels(annotes$specimenType)[2])) %>% 
   unique
 rownames(annotes)<-annotes$specimen
 
+# make lcpm gene exp dataframe with specimens of selected groups
 res <- lcpm.normCounts %>% 
   as.data.frame() %>% 
-  dplyr::filter(rownames(lcpm.normCounts) %in% cNFvsicNF_ordered$Genes[1:100]) %>% 
+  dplyr::filter(rownames(lcpm.normCounts) %in% rownames(cNFvsicNF_ordered)) %>% 
   dplyr::select(matches(annotes$specimen))
-res$ensg <- rownames(res)
-res_gene_name <- merge(res,gene_2_ensg, by = "ensg")
-rownames(res_gene_name) <- res_gene_name$`cts$gene_name`
+res$gene_name <- rownames(res)
 
+#arrange heatmap plot data by adj.Pvalue and select only the significantly different genes
+heatmap_data <- merge(res,cNFvsicNF_ordered, by= "gene_name") %>% 
+  arrange(adj.P.Val) %>% 
+  dplyr::filter(adj.P.Val < 0.05)
+rownames(heatmap_data) <- heatmap_data$gene_name
 
-heatmap_1 <- pheatmap(res_gene_name %>% 
-                        dplyr::select(-c(ensg, `cts$gene_name`)),
+# plot heatmap of all significantly different genes
+heatmap_1 <- pheatmap(heatmap_data %>% 
+                        dplyr::select(-c(gene_name, logFC, adj.P.Val, threshold)),
                        labels_col=rep("",ncol(res)),
-                       fontsize_row = 10,
+                       fontsize_row = 1,
                        clustering_method = 'ward.D2',
-                       annotation_col = dplyr::select(annotes, -specimen),
-                       treeheight_row = 30,
+                       annotation_col = dplyr::select(annotes, -c(specimen,specimenType)),
+                       treeheight_row = 100,
                        cutree_rows = 4,
                        width = 16, 
                        height = 8)
-heatmap_1
 
+#pdf("~/cnf-cell-lines/figures/DEG-heatmap_092622_4clusters.pdf", height = 20, width = 20)
+heatmap_1
+#dev.off()
+
+#pdf("~/cnf-cell-lines/figures/DEG-heatmap_092622_all_sig_genes_dendrogram.pdf", height = 20, width = 20)
 plot(heatmap_1$tree_row, cex = 0.7)
-abline(h=30, col="red", lty = 2, lwd = 2)
-heatmap_cluster <- sort(cutree(heatmap_1$tree_row, h=30))
+abline(h=100, col="red", lty = 2, lwd = 2)
+#dev.off()
+
+# dendrogram with the samples
+#pdf("~/cnf-cell-lines/figures/DEG-heatmap_092622_all_samples_dendrogram.pdf", height = 20, width = 20)
+plot(heatmap_1$tree_col, cex = 3)
+abline(h=80, col="red", lty = 2, lwd = 2)
+#dev.off()
+
+# Make subclusters
+heatmap_cluster <- sort(cutree(heatmap_1$tree_row, h=100))
+
 
 
 ```
@@ -284,11 +346,15 @@ heatmap_cluster <- sort(cutree(heatmap_1$tree_row, h=30))
 
   The clusters of genes identified above were then subjected to pathway analysis using _gprofiler2_ which uses hypergeometric test to examine enrichment of particular cellular pathways in the gene lists provided. 
   
-  The Manhattan plots show the enrichment scores (logPvalues) for pathways in various databases (e.g. KEGG, REAC, GO:MF, GO:CC etc) that represent the genes in each of the identified clusters (Clusters 1, 2, and 3). 
+  The Manhattan plots show the enrichment scores (logPvalues) for pathways in various databases (e.g. KEGG, REAC, GO:MF, GO:CC etc) that represent the genes in each of the identified clusters (Clusters 1, 2, 3, and 4). 
   
-  The table below each Manhattan plot shows the list of KEGG, REAC, and WP pathways enriched in that specific cluster along with the pValue of enrichment.
+  The table below each Manhattan plot shows the list of pathways enriched in specific clusters along with the pValue of enrichment.
+  
+&nbsp;
+  
+#### All significantly differentially expressed genes:
 
-```{r pathway, echo=F, eval= TRUE, fig.height=10, fig.width=10}
+```{r pathway-1, echo=F, eval=TRUE, fig.height=10, fig.width=10}
 
 
 
@@ -300,11 +366,7 @@ plot_df <- gprofiler2::gost(cluster_genes, organism = "hsapiens",
   domain_scope = "annotated")
 
 t <- plot_df$result
-terms_below_500 <- t[(t$term_size < 500 & t$source == "REAC" | 
-                        t$term_size < 500 & t$source == "KEGG" | 
-                        t$term_size < 500 & t$source == "`GO:CC`" | 
-                        t$term_size < 500 & t$source == "`GO:BP`" | 
-                        t$term_size < 500 & t$source == "WP"),]
+terms_below_200 <- t[(t$term_size < 200),]
 
 plot_manhattan <- gprofiler2::gostplot(plot_df,
                      capped = FALSE,
@@ -324,18 +386,29 @@ plot_manhattan <- gprofiler2::gostplot(plot_df,
 
 
 library(DT)
-table <- DT::datatable(terms_below_500[, c("source","term_name", "term_size", "query_size", "intersection_size", "p_value")])
+table <- DT::datatable(terms_below_200[, c("source","term_name", "term_size", "query_size", "intersection_size", "p_value")])
 
 my_list <- list(plot_manhattan, table)
 return(my_list)
   
 }
 
+print("Pathway enrichment among differentially expressed genes")
+output <- make_gprofiler_plots(heatmap_data$gene_name)
+
+output[[1]]
+output[[2]]
+
+```
+
+&nbsp;
+
+#### Subclusters of differentially expressed genes:
+
+```{r pathway-2, echo=FALSE, eval= TRUE, fig.height=10, fig.width=10}
 
 cluster_gene_df <- as.data.frame(heatmap_cluster)
 cluster_gene_df$gene <- row.names(cluster_gene_df)
-# cluster_gene_df <- merge(cluster_gene_df_pnf, gene_2_ensg, by = "ensg")
-# cluster_gene_df$gene <- cluster_gene_df[,3]
 
 print("Enrichment Plot of Cluster 1 genes")
 output <- make_gprofiler_plots(cluster_gene_df$gene[cluster_gene_df$heatmap_cluster == 1])
@@ -355,7 +428,7 @@ output <- make_gprofiler_plots(cluster_gene_df$gene[cluster_gene_df$heatmap_clus
 
 output[[1]]
 output[[2]]
-
+#
 print("Enrichment Plot of Cluster 4 genes")
 output <- make_gprofiler_plots(cluster_gene_df$gene[cluster_gene_df$heatmap_cluster == 4])
 
@@ -365,5 +438,3 @@ output[[2]]
 
 ```
 
-
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
